feat: Integrate AI-powered financial data extraction and Excel generation

--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,12 @@ PORT=5000
 DEBUG=False
 MAX_FILE_SIZE=52428800  # 50MB in bytes
 
+# OpenAI Configuration (Required for AI Excel Generation)
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key-here
+# Optional: Override default AI model (default: gpt-4o-mini)
+# OPENAI_MODEL=gpt-4o
+
 # Streamlit Configuration
 # (Set these if you want to run Streamlit on a different port)
 # STREAMLIT_SERVER_PORT=8501
